2003-10-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* README.xml, README

	Expanded the Win32 link text to contain the link.

2003-10-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* configure.in

	Increased version number to 0.7.5

2003-10-04  Geert Stappers  <stappers@stappers.nl>

	* configure.in: support for deb/patches

2003-09-28  Artur Flinta  <aflinta@cvs.gnome.org>

	* configure.in: Added pl to ALL_LINGUAS.

2003-09-26  Varga Robert <frozenfingers@home.ro>

	* configure.in: Added gtkdoc support

2003-09-25  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added Czech (cs) to ALL_LINGUAS.

2003-09-24  David Malcolm <david@davemalcolm.demon.co.uk>

	* configure.in

	Increased version number to 0.7.4

2003-09-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

	* configure.in
 
        Added PKG_CHECK for GtkSourceView 

2003-09-23  Geert Stappers <stappers@stappers.nl>

	* README.xml
	Made it valid against the DTD.

	* README
	completely generated:
	- xmlto html-nochunks README.xml
	- lynx -dump README.html > README

2003-09-23  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2003-09-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* configure.in

	Increased version number to 0.7.3

	* Makefile.am

	Added README.xml to EXTRA_DIST

	* README

	Removed all content and replaced with instructions about viewing README.xml
	
	* README.xml

	New file:  DocBook XML version of the README information, with (I hope) fully up-to-date content

2003-09-22  Geert Stappers <stappers@stappers.nl>

	* Makefile.am, configure.in
	All the 'deb/* stuff' is handled in 'deb/' itself.

2003-09-21  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Replaced $PACKAGE_NAME with AC_PACKAGE_NAME in
	GETTEXT_PACKAGE definition.

2003-09-21  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-09-20  Christian Rose  <menthos@menthos.com>
