@@ -1,0 +1,6 @@
+templatedir 	 = $(datadir)/conglomerate/templates
+template_DATA 	 = \
+	html.xml \
+	dispspec.xml 
+
+EXTRA_DIST = $(template_DATA)
