@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" [
+]>
+<html xmlns:cong="http://www.conglomerate.org/" cong:name="HTML" cong:description="An HTML Document">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>
+      New Web Page
+    </title>
+  </head>
+  <body>
+    <p>
+      The content of the web page goes here.
+    </p>
+  </body>
+</html>
