@@ -1,3 +1,9 @@
+2003-10-24  Jeff Martin <jeff@custommonkey.org>
+
+	* Makefile.am cong-app.c cong-fake-plugin-hooks.h plugin-doc-from-xds.c plugin-templates.c
+
+	Replaced doc-from-xds plugin with template plugin
+
 2003-10-23  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* cong-command.c, cong-editor-widget3.c
