@@ -1,3 +1,9 @@
+2003-10-24  Jeff Martin <jeff@custommonkey.org>
+
+ 	* Makefile.am configure.in
+
+	Added templates directory to build
+
 2003-10-16  David Malcolm <david@davemalcolm.demon.co.uk>
 
 	* README.xml, README
